res/main.scss
@import "node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
@import "node_modules/@fortawesome/fontawesome-free/scss/brands";
@import "node_modules/@fortawesome/fontawesome-free/scss/regular";
@import "node_modules/@fortawesome/fontawesome-free/scss/solid";
@import "node_modules/bulma/bulma";
@import "node_modules/bulma-tooltip/dist/css/bulma-tooltip";
@import "node_modules/@gros/visualization-ui/res/index";

body {
    font-family: 'Open Sans', sans-serif;
}

#header {
    margin-bottom: 10px;    
    border-bottom: 1px solid #eee;
    font-weight: 400;
}

#header h1 {
    padding: 1.5rem;
}

.control {
    white-space: nowrap;
}

.section.is-small {
    padding: 1.5rem;
}

.tabs ul {
	flex-wrap: wrap;
}

/* Keep the cards at the same height */
.card {
    display:flex;
    flex-direction: column;
    height: 100%;
}
.card-footer {
    margin-top: auto;
}

.card-header-icon {
	margin: .5rem .5rem .5rem 0;
	padding: .25rem 0;
}
.card-header .score {
	padding: .75rem .5rem .75rem .5rem;
}

.card-header-title {
	overflow: scroll;
	white-space: nowrap;
}

.ellipsized-title {
	overflow: hidden;
	text-overflow: ellipsis;
}

.card-header-title img {
    margin-right: .5rem;
}

.card-title, .card-normalize {
	white-space: nowrap;
}

.distribution svg {
	overflow: visible;
  	font: 10px sans-serif;
}

.distribution line,
.distribution rect,
.distribution circle {
  	fill: #fff;
  	stroke: #000;
  	stroke-width: 1.5px;
}

.distribution .highlight {
	stroke: dodgerblue;
}

.distribution .center {
  	stroke-dasharray: 3,3;
}

.distribution .outlier {
  	fill: none;
  	stroke: #ccc;
}

.card .clickable {
	cursor: pointer;
}

/* Color indications for score */
.score {
    font-weight: 600;
}
.score-red {
    color:  hsl(348, 100%, 41%) ;
}
.score-yellow {
    color:  hsl(48, 100%, 40%) ;
}
.score-green {
    color:  hsl(141, 71%, 28%) ;
}

/* Drag and drop */
.drag-area .card {
	opacity: .66;
	transition: opacity .4s ease-in;
	z-index: 0;
}

.drag-area .drag-card {
	opacity: 1;
	z-index: 1;
	cursor: grab;
}

.drag-area .dragging {
	cursor: grabbing;
}

.drag-area .over-droppable {
	cursor: copy;
}

.drag-area .droppable {
	opacity: 1;
}

.drag-area .clickable {
	cursor: inherit;
}

.tooltip {
	&::before, &::after {
		transition: opacity .5s ease;
		opacity: 0;
      	content: '';
		position: absolute;
	}
}

